syntax = "proto3";

package resources.mailer;

import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/mailer;mailer";

message EmailSettings {
  uint64 email_id = 1;
  // @sanitize
  optional string signature = 2 [(validate.rules).string.max_len = 1024];
  // @sanitize: method=StripTags
  repeated string blocked_emails = 3 [(validate.rules).repeated.max_items = 25];
}
